# RustDemo

./: .env  Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs
src/: main.rs  test.rs
